--- a/assets/stylesheets/stylesheet.css
+++ b/assets/stylesheets/stylesheet.css
@@ -1,10 +1,157 @@
-/* Inspiration + CSS "intro" credits: bones.sesh.team */
-/* Sources used list:
-    - spinbot.pw (video tag, #center),
-    - http://static.tumblr.com/zlim8hm/29yn6561z/force-cursor.png (cursor),
-    - https://github.com/tsenart/sight/blob/master/fonts/Consolas.ttf (font),
-    - https://emerald.gg/images/dot.png (2x2 dot, inspiration and pattern CSS)
-*/
+
+html {
+  cursor: url('../others/cursor.png'), default;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  height: 100%;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  font-family: 'Consolas', monospace;
+  box-sizing: border-box;
+  cursor: url('../others/cursor.png'), default;
+}
+
+body {
+  color: #e4e3e3;
+  background-color: #0d0d0d;
+  font-size: 16px;
+  line-height: 1.6;
+  overflow-x: hidden;
+  padding: 20px;
+}
+
+a,
+.clickables {
+  color: #e4e3e3;
+  text-decoration: none;
+  transition: color 0.3s ease, transform 0.2s ease;
+}
+
+.clickables:hover {
+  color: #1482ad;
+  transform: scale(1.05);
+}
+
+.product-list-title {
+  font-weight: 600;
+  padding-left: 58px;
+  margin-bottom: 8px
+}
+
+.product-list ul {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  margin: 0
+}
+
+.product-list li {
+  background-image: url(../images/checked.png);
+  background-repeat: no-repeat;
+  background-position: center left;
+  font-weight: 300;
+  color: #1482ad;
+  padding-left: 26px
+}
+
+.product-list li:not(:last-child) {
+  margin-bottom: 3px
+}
+
+.row {
+  --bs-gutter-x: 1.5rem;
+  --bs-gutter-y: 0;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: calc(-1 * var(--bs-gutter-y));
+  margin-right: calc(-0.5 * var(--bs-gutter-x));
+  margin-left: calc(-0.5 * var(--bs-gutter-x))
+}
+
+.row>* {
+  flex-shrink: 0;
+  width: 100%;
+  max-width: 100%;
+  padding-right: calc(var(--bs-gutter-x) * 0.5);
+  padding-left: calc(var(--bs-gutter-x) * 0.5);
+  margin-top: var(--bs-gutter-y)
+}
+
+.col {
+  flex: 1 0 0%
+}
+.col-lg-4 {
+  flex: 0 0 auto;
+  width: 33.33333333%
+}
+.row-cols-auto>* {
+  flex: 0 0 auto;
+  width: auto
+}
+
+.row-cols-1>* {
+  flex: 0 0 auto;
+  width: 100%
+}
+
+.row-cols-2>* {
+  flex: 0 0 auto;
+  width: 50%
+}
+
+.row-cols-3>* {
+  flex: 0 0 auto;
+  width: 33.3333333333%
+}
+
+.row-cols-4>* {
+  flex: 0 0 auto;
+  width: 25%
+}
+
+.row-cols-5>* {
+  flex: 0 0 auto;
+  width: 20%
+}
+
+.row-cols-6>* {
+  flex: 0 0 auto;
+  width: 16.6666666667%
+}
+input {
+  background-color: #333;
+  color: #e4e3e3;
+  border: 1px solid #555;
+  padding: 10px;
+  border-radius: 5px;
+  outline: none;
+  transition: border 0.3s ease, background-color 0.3s ease;
+}
+
+input:focus {
+  border-color: #1482ad;
+  background-color: #444;
+}
+
+hr {
+  margin: 15px 0;
+  border: 1px dashed #555;
+  opacity: 0.5;
+}
+
+pre {
+  font-size: 1.15em;
+  background-color: #1c1c1c;
+  padding: 15px;
+  border-radius: 5px;
+  overflow-x: auto;
+}
 
 #myDIV {
   width: 100%;
@@ -12,116 +159,42 @@
   border-top: 5px solid #912b57;
 }
 
-html {
-  cursor: url('../others/cursor.png'), default;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-a {
-  color: #e4e3e3;
-  text-decoration: none;
-}
-
-.clickables {
-  cursor: url('../others/cursor.png'), default;
-  color: #e4e3e3;
-  text-decoration: none;
-}
-
-.clickables:hover {
-  cursor: url('../others/cursor.png'), default;
-  color: #AD1456;
-  text-decoration: none;
-}
-
-body,
-input {
-  color: #e4e3e3;
-  background-color: rgb(13, 13, 13);
-}
-
-@font-face {
-  font-family: courier_regular;
-  src: url('../others/Consolas.html');
-}
-
-* {
-  cursor: url('../others/cursor.png'), default;
-  padding: 0;
-  margin: 0;
-  font-family: consolas, sans-serif;
-}
-
-body {
-  overflow-x: hidden;
-}
-
-input {
-  outline: 0;
-  border: none;
-}
-
-td {
-  padding: 3px;
-}
-
-hr {
-  margin-top: 15px;
-  margin-bottom: 15px;
-  border-style: dashed;
-}
-
-pre {
-  font-size: 1.15em;
-}
-
-.box,
-body,
-input {
-  background-color: rgb(13, 13, 13);
-}
-
-.box {
-  padding: 15px;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-}
-
-.top-right {
-  position: absolute;
-  top: 0;
-  right: 5px;
-}
-
-.container {
-  position: fixed;
-  text-align: center;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
-.skip-container {
-  position: fixed;
-  text-align: center;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
-
 #brand {
   margin-left: 0.65pc;
 }
 
+/* Layout Containers */
+.container,
+.container2,
+.container3,
+.skip-container {
+  position: fixed;
+  text-align: center;
+  transform: translate(-50%, -50%);
+  transition: transform 0.3s ease-in-out;
+}
+
+.container {
+  top: 50%;
+  left: 50%;
+}
+
+.container2 {
+  top: 50%;
+  left: 35%;
+}
+
+.container3 {
+  top: 50%;
+  left: 65%;
+}
+
+.skip-container {
+  top: 50%;
+  left: 50%;
+}
+
+/* Marquee */
 .marquee-container {
   position: absolute;
   width: 100%;
@@ -135,38 +208,35 @@ input {
   display: inline-block;
   margin-bottom: -4.5px;
   font-size: 15px;
+  color: #f1f1f1;
+  animation: marquee 10s linear infinite;
+}
+
+@keyframes marquee {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
 }
 
 .emoticon {
   vertical-align: middle;
 }
 
-.main {
-  overflow: hidden;
-}
-
-.background {
+/* Background Patterns and Effects */
+.background,
+#pattern {
+  position: absolute;
   width: 100%;
   height: 100%;
-  position: absolute;
-  z-index: -3;
 }
 
 #pattern {
   background: transparent url('../others/dot.png') repeat 0 0;
-  top: 0;
-  left: 0;
-  margin: 0;
-  padding: 0;
+  opacity: 0.2;
   z-index: -1;
-  opacity: 1;
-}
-
-#pattern,
-#background {
-  position: absolute;
-  width: 100%;
-  height: 100%;
 }
 
 #background {
@@ -180,26 +250,42 @@ input {
   height: auto;
   transform: translateX(-50%) translateY(-50%);
   background-size: cover;
-  overflow: hidden;
+  filter: blur(5px);
   -webkit-filter: blur(5px);
   -moz-filter: blur(5px);
-  -o-filter: blur(5px);
   -ms-filter: blur(5px);
-  filter: blur(5px);
+  -o-filter: blur(5px);
+  overflow: hidden;
 }
 
+/* Footer */
 .footer {
   position: absolute;
   bottom: 0;
   right: 5px;
+  font-size: 14px;
+  color: #e4e3e3;
+  opacity: 0.6;
 }
 
+/* Trollface Image Invert */
 .trollface-light {
+  filter: invert(100%);
   -webkit-filter: invert(100%);
   -moz-filter: invert(100%);
   -ms-filter: invert(100%);
 }
 
+/* Scrollbar Customization */
 ::-webkit-scrollbar {
-  width: 0;
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #555;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #1482ad;
 }
