--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ body {
 }
 
 .logo img {
-    height: 40px;
+    height: 120px;
     width: auto;
 }
 
@@ -242,7 +242,7 @@ body {
 .hero {
     position: relative;
     height: 100vh;
-    background-image: url('/assets/bg.webp');
+    background-image: url('assets/bg.png');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -829,7 +829,7 @@ body {
     min-height: calc(100vh + 150px);
     padding: 12rem 2rem 8rem 2rem;
     text-align: center;
-    background-image: url('/assets/bg.webp');
+    background-image: url('assets/bg.png');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -1414,4 +1414,10 @@ body {
         width: 100%;
         min-width: auto;
     }
+}
+.titlept1{
+    color: purple;
+}
+.titlept2{
+    color: black;
 }
